--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </div>
   </section>
   <section id="services-section" class="bg-white relative">
-    <div class="shadow-lg p-8 bg-white rounded-md  w-10/12 absolute m-auto left-0 right-0 transform translate-y-[-50%]">
+    <div class="shadow-lg p-8 bg-white rounded-md  w-10/12 absolute m-auto left-0 right-0 transform translate-y-[-40%]">
       <div class="flex flex-col md:flex-row   gap-4 my-4">
         <div class="flex gap-2 w-full items-center justify-between border h-full py-2 px-2 rounded-lg">
           <p class="opacity-80">
@@ -223,7 +223,7 @@
           </p>
           <img src="./assets/icons/Down_Arrow.svg" alt="Arrow" />
         </div>
-        <div class="flex gap-2 grow items-center justify-start border h-full py-2 px-2 rounded-lg">
+        <div class="flex gap-2  w-full grow items-center justify-start border h-full py-2 px-2 rounded-lg">
           <span id="search-icon">
             <img src="./assets/icons/Search_Icon.svg" alt="Search" />
           </span>
@@ -262,7 +262,7 @@
         </div>
       </div>
       <div class="flex flex-col md:flex-row  items-end justify-between">
-        <div class="flex py-2 md:px-2 m-4  border-b md:border-r">
+        <div class="flex py-2 md:px-2 m-4 md:border-r">
           <div class="flex items-center">
             <img src="./assets/icons/Discount.svg" class="m-4" />
           </div>
@@ -282,7 +282,7 @@
             <p class="text-gray-400">Save Money with our deals of & offers</p>
           </div>
         </div>
-        <div class="flex   px-2 m-4 border-l">
+        <div class="flex   px-2 m-4 md:border-l">
           <div class="flex items-center">
             <img src="./assets/icons/Payment.svg" class="m-4" />
           </div>
@@ -317,7 +317,7 @@
         <div class="">
           <div class="relative">
             <img src="./assets/icons/Food_1.png" alt="">
-            <span class="bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+            <span class=" heart bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
               <img src="./assets/icons/Heart.svg" alt="" class="">
             </span>
           </div>
@@ -361,7 +361,7 @@
         <div class="hidden md:block">
           <div class="relative">
             <img src="./assets/icons/Food_1.png" alt="">
-            <span class="bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+            <span class="bg-white  heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
               <img src="./assets/icons/Heart.svg" alt="" class="">
             </span>
           </div>
@@ -405,7 +405,7 @@
         <div class="hidden md:block">
           <div class="relative">
             <img src="./assets/icons/Food_1.png" alt="">
-            <span class="bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+            <span class="bg-white heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
               <img src="./assets/icons/Heart.svg" alt="" class="">
             </span>
           </div>
@@ -471,7 +471,7 @@
         <div class="bg-white rounded-3xl pb-4">
           <div class="relative">
             <img src="./assets/icons/Food_1.png" alt="">
-            <span class="bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+            <span class="bg-white heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
               <img src="./assets/icons/Heart.svg" alt="" class="">
             </span>
           </div>
@@ -515,7 +515,7 @@
         <div class="bg-white hidden md:block rounded-3xl pb-4">
           <div class="relative">
             <img src="./assets/icons/Food_1.png" alt="">
-            <span class="bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+            <span class="bg-white heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
               <img src="./assets/icons/Heart.svg" alt="" class="">
             </span>
           </div>
@@ -559,7 +559,7 @@
         <div class="bg-white hidden md:block rounded-3xl pb-4">
           <div class="relative">
             <img src="./assets/icons/Food_1.png" alt="">
-            <span class="bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+            <span class="bg-white heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
               <img src="./assets/icons/Heart.svg" alt="" class="">
             </span>
           </div>
