--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <div class="">
           <div class="relative">
             <img src="./assets/icons/Food_1.png" alt="">
-            <span class=" heart bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+            <span id="1" class=" heart bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
               <img src="./assets/icons/Heart.svg" alt="" class="">
             </span>
           </div>
@@ -361,7 +361,7 @@
         <div class="hidden md:block">
           <div class="relative">
             <img src="./assets/icons/Food_1.png" alt="">
-            <span class="bg-white  heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+            <span id="2" class="bg-white  heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
               <img src="./assets/icons/Heart.svg" alt="" class="">
             </span>
           </div>
@@ -405,7 +405,7 @@
         <div class="hidden md:block">
           <div class="relative">
             <img src="./assets/icons/Food_1.png" alt="">
-            <span class="bg-white heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+            <span id="3" class="bg-white heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
               <img src="./assets/icons/Heart.svg" alt="" class="">
             </span>
           </div>
@@ -471,7 +471,7 @@
         <div class="bg-white rounded-3xl pb-4">
           <div class="relative">
             <img src="./assets/icons/Food_1.png" alt="">
-            <span class="bg-white heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+            <span id="4" class="bg-white heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
               <img src="./assets/icons/Heart.svg" alt="" class="">
             </span>
           </div>
@@ -515,7 +515,7 @@
         <div class="bg-white hidden md:block rounded-3xl pb-4">
           <div class="relative">
             <img src="./assets/icons/Food_1.png" alt="">
-            <span class="bg-white heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+            <span id="5" class="bg-white heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
               <img src="./assets/icons/Heart.svg" alt="" class="">
             </span>
           </div>
@@ -559,7 +559,7 @@
         <div class="bg-white hidden md:block rounded-3xl pb-4">
           <div class="relative">
             <img src="./assets/icons/Food_1.png" alt="">
-            <span class="bg-white heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+            <span id="6" class="bg-white heart rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
               <img src="./assets/icons/Heart.svg" alt="" class="">
             </span>
           </div>
